--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -3,7 +3,6 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Profile";
     ViewData["ActivePage"] = ManageNavPages.Index;
     var user = await UserManager.GetUserAsync(User); 
 }
@@ -11,20 +10,25 @@
 <h4 class="top-margin"></h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <form id="profile-form" method="post" enctype="multipart/form-data">
-    <div class="row text-center">
-        <div class="col-md-4" style="margin: 0 auto;">
+    <div class="row text-center" style="height: 150px;position:relative;">
+        <label>
+            <img id="img-output-wallpaper" style="height:150px;width:100%;" src="@user.Wallpaper" style="cursor:pointer;">
+            <i class="fas fa-camera" title="Change Image" style="color:rgba(255,255,255,.7);cursor:pointer;position:absolute;bottom:3px;right:3px;z-index:200;"></i> 
+            <input asp-for="Input.Wallpaper" id="img-input-wallpaper" type="file" accept="image/*" name="wallpaper" style="display:none;" />
+        </label>
+        <div class="col-md-4" style="margin: -150px auto 0 auto;">
             <label>
-                <img id="img-output" class="img-user" src="@user.Picture" title="Picture of you!" style="cursor:pointer;">
+                <img id="img-output-user" class="img-user bottom-margin" src="@user.Picture" title="Picture of you!" style="cursor:pointer;">
                 <div class="img-user-overlay">
                     <i class="fas fa-camera" title="Change Image" style="cursor:pointer;"></i> 
                 </div>
-                <input asp-for="Picture" id="img-input" type="file" accept="image/*" name="picture" style="display:none;" />
+                <input asp-for="Input.Picture" id="img-input-user" type="file" accept="image/*" name="picture" style="display:none;" />
             </label>
-            <span asp-validation-for="Picture" class="text-danger"></span>
+            <span asp-validation-for="Input.Picture" class="text-danger"></span>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-4" style="margin:0 0 0 auto;">
+    <div class="row top-margin">
+        <div class="col-md-4" style="margin:10px 0 0 auto;">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <input asp-for="Input.UserName" class="form-control" />
@@ -37,13 +41,13 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Input.City" class="form-control" placeholder="City" value="@user.City" />
+                <input asp-for="Input.City" class="form-control" placeholder="City..." value="@user.City" />
             </div>
             <div class="form-group">
-                <input asp-for="Input.State" class="form-control" placeholder="State" value="@user.State" />
+                <input asp-for="Input.State" class="form-control" placeholder="State..." value="@user.State" />
             </div>
             <div class="form-group">
-                <input asp-for="Input.ZipCode" class="form-control" placeholder="ZipCode" value="@user.ZipCode" />
+                <input asp-for="Input.ZipCode" class="form-control" placeholder="ZipCode..." value="@user.ZipCode" />
                 <span asp-validation-for="Input.ZipCode" class="text-danger"></span>
             </div>
         </div>
@@ -51,8 +55,8 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class="form-inline">
-                    <input asp-for="Input.FirstName" class="form-control" style="width: 45%; margin-right: 10%;" placeholder="First" />
-                    <input asp-for="Input.LastName" class="form-control" style="width: 45%;" placeholder="Last" />
+                    <input asp-for="Input.FirstName" class="form-control" style="width: 45%; margin-right: 10%;" placeholder="First..." />
+                    <input asp-for="Input.LastName" class="form-control" style="width: 45%;" placeholder="Last..." />
                 </div>
             </div>
             <div class="form-group">
@@ -60,12 +64,12 @@
                 <span asp-validation-for="Input.BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Input.Age" class="form-control" placeholder="Age" value="@user.Age" />
+                <input asp-for="Input.Age" class="form-control" placeholder="Age..." value="@user.Age" />
                 <span asp-validation-for="Input.Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="(000) 000-0000" value="@user.PhoneNumber" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <textarea asp-for="Input.Profile" class="form-control" placeholder="Write something about yourself! Up to 255 characters..." value="@user.Profile"></textarea>
+                <span asp-validation-for="Input.Profile" class="text-danger"></span>
             </div>
         </div>
     </div>
