--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -4,11 +4,10 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Admin";
     var you = await UserManager.GetUserAsync(User);
 }
 
-<h4 class="top-margin">@ViewData["Title"]</h4>
+<h4 class="top-margin">Admin</h4>
 <form id="profile-form" method="post" enctype="multipart/form-data">
     <div class="container" style="border-radius: 5px;border: 1px solid #ffffff; min-height: 540px; max-height: 500px; overflow-y: scroll;">
         @foreach (var user in Model)
