--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,45 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@section Scripts
+{
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script src="~/js/site.js"></script>
 }
-
-<div class="text-center top-margin">
-    <h1 class="display-4">Hello, world.</h1>
+<div id="vue-app" class="top-margin" style="margin-bottom: 60px;">
+    <div>
+        <!-- <div style="height:40px; width:100%;">
+            <form class="form-inline has-feedback">
+                <input id="search" v-model="search" type="input" placeholder="Search..." class="search" />
+                <i id="search-icon" class="glyphicon glyphicon-search form-control-feedback"></i>
+            </form>
+        </div> -->
+        <div v-if="loading" style="margin: 50% auto 0 auto;" class="text-center text-primary"><i class="fas fa-spinner fa-10x spinning"></i></div>
+        <div v-if="!loading">
+            <div v-for="item in news" class="row top-margin bottom-margin" style="background-color: #f5f5f5;">
+                <a data-toggle="modal" href="@("#articleModal")" style="padding: 0 5px;font-size: 14px;color: #000000;text-decoration: none;" v-on:click="setModal(item)">
+                    <div style="height: 200px; width: 100%; object-fit: cover;">
+                        <img style="height: 200px; width: 100%;" :src="item.urlToImage">
+                    </div>
+                    <p style="padding: 0 5px;font-weight: bolder;font-size: 18px;">{{item.title}}</p>
+                    <p style="padding: 0 5px;font-size: 12px;margin-top: -10px;" class="text-primary">{{item.author}}, {{item.publishedAt}}</p>
+                    <p style="padding: 0 5px;">{{item.description}}</p>
+                    <p style="padding: 0 5px;font-size: 14px;">{{item.content}}</p>
+                </a>
+                <div class="modal fade top-margin" id="articleModal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content text-center" style="height: 600px;">
+                            <div class="modal-header">
+                                {{modal.title}}
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div class="modal-body">
+                                <div class="embed-responsive embed-responsive-16by9">
+                                    <iframe class="embed-responsive-item" :src="modal.url" allowfullscreen></iframe>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
+    </div>
 </div>
