--- a/Views/Message/Chat.cshtml
+++ b/Views/Message/Chat.cshtml
@@ -4,13 +4,14 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{
-    ViewData["Title"] = "Chat";
     var user = await UserManager.GetUserAsync(User);
     var receiverId = "";
     var senderId = "";
     var routeId = @ViewContext.RouteData.Values["id"].ToString();
+    var png = ".png";
+    var jpg = ".jpeg";
+    var jpeg = ".jpeg";
 }
-
 <h4 class="text-center top-margin">Chat</h4>
 <form method="post" enctype="multipart/form-data">
     <div class="row form-group">
@@ -24,7 +25,7 @@
                     }
                     else 
                     {
-                        <li style="display:inline-block;clear: both;margin: 2px;"> <img style="float: left;border-radius: 50%; height: 30px; width: 30px;margin-right:5px;" src="~/images/icons/icon-puppy.png"><span class="float-left bg-success text-white" style="width: auto;border-radius: 7px;padding: 1% 2%;">@message.Content</span></li>
+                        <li style="display:inline-block;clear: both;margin: 2px;"> <img style="float: left;border-radius: 50%; height: 30px; width: 30px;margin-right:5px;" src="https://whyappstorage.blob.core.windows.net/images/User-@message.SenderId@png"><span class="float-left bg-success text-white" style="width: auto;border-radius: 7px;padding: 1% 2%;">@message.Content</span></li>
                     }
                     receiverId = @message.ReceiverId;
                     senderId = @message.SenderId;
@@ -32,7 +33,6 @@
             </ul>
         </div>
     </div>
-
 </form>
     @using(Html.BeginForm("SendMessage","Message"))
     {
