--- a/Views/Message/Index.cshtml
+++ b/Views/Message/Index.cshtml
@@ -3,19 +3,16 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-
 @{
-    ViewData["Title"] = "Messages";
     var user = await UserManager.GetUserAsync(User);
     var receiverId = "";
     var senderId = "";
     var routeId = "";
 }
-
-<h4 class="top-margin">@ViewData["Title"]</h4>
-<form method="post" enctype="multipart/form-data">
+<h4 class="top-margin">Messages</h4>
     <div class="container">
         <div class="panel-body">
+            <form method="post" enctype="multipart/form-data">
             <ul id="contacts" class="list-group message-container" style="background-color: #ffffff;">                        
                 @foreach (var users in Model) 
                 {
@@ -29,6 +26,7 @@
                     }
                 }
             </ul>
+            </form>
             <a class="message-compose" data-toggle="modal" href="@("#newMessageModal")"><i class="text-white far fa-comment" style="margin:25%;"><span style="font-size: 16px;">&#43;</span></i></a>
             <div class="modal fade top-margin" id="@("newMessageModal")" tabindex="-1" role="dialog">
                 <div class="modal-dialog">
@@ -40,27 +38,23 @@
                                 <button type="button" class="close float-right" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
-                                @if (user.Id == @receiverId)
-                                {
-                                    <input type="hidden" name="id" value="@senderId" />
-                                }
-                                else 
-                                {
-                                    receiverId = routeId;
-                                    <input type="hidden" name="id" value="@receiverId" />
-                                }
-                                <select class="form-group form-control">
+                                <input id="receiver-id" type="hidden" name="id" value="" />
+                                <select id="select-receiver" class="form-group form-control">
                                     <option>Select user...</option>
                                     @foreach (var u in @ViewBag.Users) 
                                     {
-                                        <option value="@u.Id" name="id">
-                                            <span><img class="img-user-navbar" src="@u.Picture" /> @u.UserName</span>
-                                        </option>
+                                        @if (u.Id != user.Id)
+                                        {
+                                            <option value="@u.Id">
+                                                <span><img class="img-user-navbar" src="@u.Picture" /> @u.UserName</span>
+                                            </option>
+                                        }
                                     }
                                 </select>
                                 <input name="content" class="form-group input-group message-input" placeholder="Type message here..." />
                                 <button type="button" class="btn btn-secondary float-right" style="margin-left: 5px;" data-dismiss="modal">Cancel</button> 
                                 <button class="btn btn-primary float-right">Send</button>
+                                <div class="bottom-margin">&nbsp;</div>
                             </div>
                         }
                     </div>
@@ -68,4 +62,3 @@
             </div>
         </div>
     </div>
-</form>
