--- a/Views/Shared/_FooterNavPartial.cshtml
+++ b/Views/Shared/_FooterNavPartial.cshtml
@@ -4,24 +4,22 @@
 @{
     var user = await UserManager.GetUserAsync(User);
 }    
-
 <div class="footer-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <a asp-controller="Home" asp-action="Index"><i class="text-primary fas fa-home"></i></a>
     <a asp-controller="Message" asp-action="Index"><i class="text-primary fas fa-envelope"></i></a>
-    <a asp-controller="Home" asp-action="Index"><i class="text-primary fas fa-bell"></i></a>
+    <a asp-controller="Home" asp-action="Friends"><i class="text-primary fas fa-users"></i></a>
     <a asp-area="Identity" asp-page="/Account/Manage/Index"><i class="text-primary fas fa-user"></i></a>
     @if (User.IsInRole("Admin"))
     {
-    <a asp-controller="Home" asp-action="Admin"><i class="text-primary fas fa-users"></i></a>
+    <a asp-controller="Home" asp-action="Admin"><i class="text-primary fas fa-users-cog"></i></a>
     }
 }
 else
 {
     <a asp-controller="Home" asp-action="Index"><i class="text-primary fas fa-home"></i></a>
-    <a asp-controller="Message" asp-action="Index"><i class="text-primary fas fa-envelope"></i></a>
-    <a asp-controller="Home" asp-action="Index"><i class="text-primary fas fa-bell"></i></a>
-    <a asp-area="Identity" asp-page="/Account/Manage/Index"><i class="text-primary fas fa-user"></i></a>
+    <a asp-controller="Home" asp-action="Friends"><i class="text-primary fas fa-users"></i></a>
+    <a asp-controller="Home" asp-action="About"><i class="text-primary fas fa-info-circle"></i></a>
 }
 </div>
