--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,38 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WhyApp</title>
+    <!-- Start of PWA meta elements -->
+    <meta name=”apple-mobile-web-app-capable” content=”yes”>
+    <meta name=”mobile-web-app-capable” content=”yes”>
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="address=no">    
+    <meta name="apple-mobile-web-app-title" content="MoogleApi">
+    <meta name="apple-mobile-web-app-orientations" content="portrait-any">
+    <!-- End of PWA meta elements -->
+    <title>WhyApp</title>
+    <!-- Start of PWA icons -->
+    <!-- Home screen icon -->
+    <link rel="apple-touch-icon" href="~/icons/icon-ff-moogle-180.png">
+    <!-- iPhone Xs Max (1242px x 2688px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" href="~/images/icons/whyapp-1242x2688.png">
+    <!-- iPhone Xr (828px x 1792px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" href="~/images/icons/whyapp-828x1792.png">
+    <!-- iPhone X, Xs (1125px x 2436px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" href="~/images/icons/whyapp-1125x2436.png">
+    <!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus (1242px x 2208px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)" href="~/images/icons/whyapp-1242x2208.png">
+    <!-- iPhone 8, 7, 6s, 6 (750px x 1334px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" href="~/images/icons/whyapp-750x1334.png">
+    <!-- iPad Pro 12.9" (2048px x 2732px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" href="~/images/icons/whyapp-2048x2732.png">
+    <!-- iPad Pro 11” (1668px x 2388px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" href="~/images/icons/whyapp-1668x2388.png">
+    <!-- iPad Pro 10.5" (1668px x 2224px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" href="~/images/icons/whyapp-1668x2224.png">
+    <!-- iPad Mini, Air (1536px x 2048px) --> 
+    <link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" href="~/images/icons/whyapp-1536x2048.png">
+    <!-- End of PWA icons -->
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -53,14 +84,23 @@
                 integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
         </script>
     </environment>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
     @RenderSection("Scripts", required: false)
     <script>
-        $("#img-input").change(function(event) {
+        $("#img-input-user").change(function(event) {
             let imgPath = URL.createObjectURL(event.target.files[0]);
-            $("#img-output").fadeIn("fast").attr('src',imgPath); 
+            $("#img-output-user").fadeIn("fast").attr('src',imgPath); 
         }); 
+
+        $("#img-input-wallpaper").change(function(event) {
+            let imgPath = URL.createObjectURL(event.target.files[0]);
+            $("#img-output-wallpaper").fadeIn("fast").attr('src',imgPath); 
+        }); 
+
+        $("#select-receiver").change(function() {
+            let id = $(this).val();
+            let target = $('#receiver-id'); 
+            $(target).attr('value', id);
+        });
     </script>
 </body>
 </html>
