--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -3,11 +3,10 @@
 @inject UserManager<ApplicationUser> UserManager
 @{
     var user = await UserManager.GetUserAsync(User);
-}    
-
+}
 @if (SignInManager.IsSignedIn(User))
 {
-    <h1 class="float-left">WhyApp</h1>
+    <h1 class="float-left" style="margin-top:-10px;"><img src="~/images/icons/whyappicon.png" style="height:40px; width:auto;"> <span style="font-size:22px;">WhyApp</span></h1>
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
         <button type="submit" class="btn-logout"><i class="text-white fas fa-sign-out-alt"></i></button>
     </form>
@@ -15,7 +14,7 @@
 }
 else
 {
-    <h1 class="float-left">appname</h1>
+    <h1 class="float-left" style="margin-top:-10px;"><img src="~/images/icons/whyappicon.png" style="height:40px; width:auto;"> <span style="font-size:22px;">WhyApp</span></h1>
     <a class="nav-link text-dark float-right" asp-area="Identity" asp-page="/Account/Register"><i class="text-primary fas fa-book-reader"></i></a>
     <a class="nav-link text-dark float-right" asp-area="Identity" asp-page="/Account/Login"><i class="text-primary fas fa-sign-in-alt"></i></a>
 }
