Added img border to manage profile page

--- a/Views/Home/Profile.cshtml
+++ b/Views/Home/Profile.cshtml
@@ -9,7 +9,7 @@
 <div class="row text-center top-margin" style="height:150px;">
     <img id="img-output-wallpaper" style="height:150px;width:100%;" src="@user.Wallpaper" style="cursor:pointer;">
     <div class="col-md-4" style="margin: -150px auto 0 auto;">
-        <img class="img-user bottom-margin" src="@Model.Picture" title="Picture of user!" style="border: 2px solid #ffffff;">
+        <img class="img-user bottom-margin" src="@Model.Picture" title="Picture of user!">
     </div>
 </div>
 <div class="row top-margin" style="margin-top: 80px;">
