--- a/Views/Message/Chat.cshtml
+++ b/Views/Message/Chat.cshtml
@@ -12,7 +12,7 @@
     var jpg = ".jpeg";
     var jpeg = ".jpeg";
 }
-<h4 class="text-center top-margin">Chat</h4>
+<h4 class="top-margin">Chat</h4>
 <form method="post" enctype="multipart/form-data">
     <div class="row form-group">
         <div class="col-md-6" style="margin: 0 auto;">
