--- a/Views/Home/Friends.cshtml
+++ b/Views/Home/Friends.cshtml
@@ -19,15 +19,15 @@
                 </div>
             </div>
         </form>
-        <div class="container message-container top-margin" style="background-color: #ffffff;">                        
+        <div class="message-container top-margin" style="background-color: #ffffff;">                        
             @foreach (var users in Model) 
             {
                 <a asp-action="Profile" asp-route-id="@users.Id">
-                    <div class="row">
-                        <div class="col-xs-4">
+                    <div class="row" style="padding-left:15px;">
+                        <div class="col-xs-5">
                             <img src="@users.Picture" style="margin-right: 10px;width:70px;height70px;" />
                         </div>
-                        <div class="col-xs-8">
+                        <div class="col-xs-7">
                             <span style="font-size: 18px;">@users.UserName</span> <br/>
                             <span style="font-size: 16px;">@users.City, @users.State</span>
                         </div>
