--- a/Views/Message/Chat.cshtml
+++ b/Views/Message/Chat.cshtml
@@ -14,24 +14,36 @@
 }
 <h4 class="top-margin">Chat</h4>
 <form method="post" enctype="multipart/form-data">
-    <div class="row form-group">
-        <div class="col-md-6" style="margin: 0 auto;">
-            <ul class="container list-group message-container">                        
+    <div class="form-group" style="width:100%;">
+            <div class="list-group message-container">                        
                 @foreach (var message in Model) 
                 {
                     @if(@message.SenderId == @user.Id) 
                     {
-                        <li style="display:inline-block;clear: both; margin: 2px;float:right;"><img style="float: right;border-radius: 50%; height: 30px; width: 30px;margin-left:5px;" src="@user.Picture"><span class="float-right bg-primary text-white" style="width: auto;border-radius: 7px;padding: 1% 2%;">@message.Content</span></li>
+                        <div class="row" style="margin: 2px 2px 10px 2px;float:right;">
+                            <div class="col-sm-12" style="padding:0;">
+                                <img style="float: right;border-radius: 50%; height: 30px; width: 30px;margin-left:5px;" src="@user.Picture"><span class="float-right bg-primary text-white" style="width: auto;border-radius: 7px;padding: 1% 2%;">@message.Content</span>
+                            </div>
+                            <div class="col-sm-12" style="padding:0;">
+                                <span style="color: #bdbdbd;height:15px; font-size:10px; float:right;">Sent @message.CreateDate</span>
+                            </div>
+                        </div>
                     }
                     else 
                     {
-                        <li style="display:inline-block;clear: both;margin: 2px;"> <img style="float: left;border-radius: 50%; height: 30px; width: 30px;margin-right:5px;" src="https://whyappstorage.blob.core.windows.net/images/User-@message.SenderId@png"><span class="float-left bg-success text-white" style="width: auto;border-radius: 7px;padding: 1% 2%;">@message.Content</span></li>
+                        <div class="row" style="margin: 2px 2px 10px 2px;">
+                            <div class="col-sm-12" style="padding:0;">
+                                <img style="float: left;border-radius: 50%; height: 30px; width: 30px;margin-right:5px;" src="https://whyappstorage.blob.core.windows.net/images/User-@message.SenderId@png"><span class="float-left bg-success text-white" style="width: auto;border-radius: 7px;padding: 1% 2%;">@message.Content</span>
+                            </div>
+                            <div class="col-sm-12" style="padding:0;">
+                                <span style="color: #bdbdbd;height:15px;font-size:10px;">Sent @message.CreateDate</span>
+                            </div>
+                        </div>
                     }
                     receiverId = @message.ReceiverId;
                     senderId = @message.SenderId;
                 }
-            </ul>
-        </div>
+            </div>
     </div>
 </form>
     @using(Html.BeginForm("SendMessage","Message"))
