--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -100,7 +100,7 @@ body {
 }
 .message-input {
   min-height: 30px;
-  height: auto;
+  height: 33.5px;
   background-color: #f5f5f5;
   border-radius: 5px;
   border: transparent;
@@ -110,10 +110,9 @@ body {
   min-height: 450px; 
   max-height: 450px; 
   overflow-y: scroll; 
-  background-color: #f5f5f5;
   list-style-type: none;
   border-radius: 5px; 
-  padding: 5px 15px;
+  padding: 5px 0;
 }
 ::placeholder {
   color: #9e9e9e;
